More tab updates.